# Mnemo

./: .env.example  .gitignore  HANDOFF.md  README.md  deploy_key  deploy_key.pub
.deploy/: backend-patch.tgz  backend-sprint8.tgz  frontend-answer-fix-out.tgz  frontend-countdown-out.tgz  frontend-courses-bridge-20260421-094712.tgz  frontend-dashboard-cockpit-20260421-093225.tgz  frontend-group-training-out.tgz  frontend-learning-home-20260421-091310.tgz  frontend-memory-flows-20260421-085957.tgz  frontend-memory-flows-20260421-090332.tgz  frontend-out.tgz  frontend-review-lock-20260421-092754.tgz  frontend-sprint8-out.tgz  text-fallback-payload.json
.github/workflows/: ci.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_memory_training_fields.py  20260421_0002_card_encounter_wrong_reason.py  20260421_0003_task_plan_template_tables.py  20260421_0004_task_plan_template_source_filename.py  20260421_0005_task_plan_entry_manual_text.py  20260421_0006_task_plan_export_mapping.py  20260421_0007_card_released_at.py  20260422_0001_memory_card_last_wrong_detail.py  (+1 more)
backend/app/: main.py
backend/tests/: test_casr.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CASR_REFERENCE.md  MEMORY_ALGORITHM.md  WHITEPAPER.md  WHITEPAPER_TRACEABILITY.md  WHITEPAPER_V2.md  WHITEPAPER_V3.md
frontend/: package-lock.json  package.json
frontend/public/: manifest.json  sw.js
mobile/: capacitor.config.json
scripts/: deploy-backend.sh  deploy-sprint0.sh  setup-server.sh
(+57 files in other folders)
