[package]
name = "mnemo"
version = "0.6.0"
description = "Mnemo — 智能学习管理平台"
authors = ["Mnemo Team"]
edition = "2021"

[lib]
name = "mnemo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
